--- a/blog.html
+++ b/blog.html
@@ -10,6 +10,7 @@
     <h1>Pagina de blog<h1>
     <h2> post numero 1</h2>   
     <h3>post numero 2</h3> 
+    <h4> teste </h4>
     </h1>
     <a href="index.html"> Voltar para pagina inicial</a>
 
